Task 2 from homework 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ set(SOURCE_LIB
 )
 add_library(library ${SOURCE_LIB})
 add_executable(task_1 Homework1/task_1.c)
+add_executable(task_2 Homework1/task_2.c)
