--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 11)
 
 set(SOURCE_LIB
     library/commonUtils/numericOperations.c
-)
+        Homework2/Task_1/linked_map.c Homework2/Task_1/task_1.c Homework2/Task_1/linked_map.h)
 add_library(library ${SOURCE_LIB})
 
 add_executable(task_2 Homework1/task_2.c)
