--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(task_2 Homework1/task_2.c)
 add_executable(task_3 Homework1/task_3.c)
 add_executable(task_4 Homework1/task_4.c)
 add_executable(task_5 Homework1/task_5.c)
+add_executable(task_2_1 Homework2/Task_1/task_1.c)
