--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_C_STANDARD 11)
 
 set(SOURCE_LIB
     library/commonUtils/numericOperations.c
+        Test1/Vector.c
 )
 add_library(library ${SOURCE_LIB})
 
@@ -13,4 +14,7 @@ add_executable(task_2 Homework1/task_2.c)
 add_executable(task_3 Homework1/task_3.c)
 add_executable(task_4 Homework1/task_4.c)
 add_executable(task_5 Homework1/task_5.c)
+add_executable(task1_test1 Test1/task_1.c)
+
+target_link_libraries(task1_test1 library)
 
