--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ set(SOURCE_LIB
         Homework2/Task_2/dna_editor.c)
 add_library(library ${SOURCE_LIB})
 
-add_executable(task_1 Homework1/task1.c)
-add_executable(task_2 Homework1/task_2.c)
-add_executable(task_3 Homework1/task_3.c)
-add_executable(task_4 Homework1/task_4.c)
-add_executable(task_5 Homework1/task_5.c)
-add_executable(task_2_2 Homework2/Task_2/task_2.c)
+add_executable(task_1.1 Homework1/task1.c)
+add_executable(task_1.2 Homework1/task_2.c)
+add_executable(task_1.3 Homework1/task_3.c)
+add_executable(task_1.4 Homework1/task_4.c)
+add_executable(task_1.5 Homework1/task_5.c)
+add_executable(task_2.2 Homework2/Task_2/task_2.c)
 
-target_link_libraries(task_2_2 library)
+target_link_libraries(task_2.2 library)
 
