--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ target_link_libraries(task_2.1 library)
 add_executable(task_3.1 Homework3/task_1.c)
 add_executable(task_3.2 Homework3/task_2.c)
 add_executable(task_3.3 Homework3/task_3.c)
+add_executable(task_9.1 Homework9/dijkstra.c)
