--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_executable(task_3.3 Homework3/task_3.c)
 add_executable(retest1_1.2 Retest1/test1_task2.c)
 add_executable(Test2_task_1 Test2/task_1.c)
 add_executable(Final_Test_task_1 Final_Test/task_1.c)
+add_executable(Final2_kr2_1 Final2/kr2_1.c)
